Fixed responsive issues with project images, adjusted responsive layout on tablets

--- a/src/App.css
+++ b/src/App.css
@@ -762,8 +762,8 @@ a {
 /* Custom, iPhone Retina */
 @media only screen and (min-width: 300px) {
   .info-section {
-    padding-top: 15em;
-    padding-bottom: 15em;
+    padding-top: 10em;
+    padding-bottom: 10em;
     width: 90%;
     height: auto;
     margin-left: auto;
@@ -788,30 +788,21 @@ a {
 
 /* Small Devices, Tablets */
 @media only screen and (min-width: 768px) {
-  .info-section {
-    padding-top: 10em;
-    padding-bottom: 10em;
-    width: 100%;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center; }
-  /*  .name-title {
-    h1, h2 {
-      display: inline-block;
-      padding: 1em;
-    }
-  }
-*/
-  .me {
-    width: 100%;
-    height: auto; }
-  .description {
-    width: 50%;
-    height: auto;
+  h1 {
+    width: 90%;
     margin: auto; }
-    .description p {
-      margin: auto; } }
+  .description {
+    width: 80%;
+    margin: auto; } }
+
+/* Medium Devices, Desktops */
+@media only screen and (min-width: 992px) {
+  h1 {
+    width: 100%;
+    margin: auto; }
+  .description {
+    width: 60%;
+    margin: auto; } }
 
 @media only screen and (min-width: 300px) {
   .project-section {
@@ -831,7 +822,7 @@ a {
       padding-bottom: 1em; }
     .project-section hr {
       margin-bottom: 10em;
-      width: 90%; }
+      width: 100%; }
     .project-section ul {
       list-style-type: none; }
       .project-section ul li {
@@ -846,13 +837,19 @@ a {
         line-height: 1.6;
         font-weight: 500; }
     .project-section .project-image {
-      max-width: 100%;
-      max-height: 100%; } }
+      height: 250px;
+      width: 100%; } }
 
 /* Small Devices, Tablets */
 @media only screen and (min-width: 768px) {
   .project-section {
-    width: 70%; } }
+    width: 70%; }
+    .project-section hr {
+      margin-bottom: 5em; }
+    .project-section .project-image {
+      display: block;
+      width: 100%;
+      height: 300px; } }
 
 /* Medium Devices, Desktops */
 @media only screen and (min-width: 992px) {
@@ -861,7 +858,10 @@ a {
     position: relative;
     height: auto;
     margin-bottom: 20em;
-    z-index: 1; }
+    z-index: 1;
+    padding-top: 5em; }
+    .project-section hr {
+      width: 90%; }
     .project-section ul li p, .project-section h3 {
       display: none; }
     .project-section ul {
@@ -872,16 +872,16 @@ a {
         vertical-align: top;
         padding: .5em;
         height: auto; }
+    .project-section .project-image {
+      display: block;
+      width: 250px;
+      height: 200px; }
   .image-container {
     position: relative;
     width: 100%;
     height: 100%;
     display: inline-block;
     background-color: #D3D3D3; }
-  .project-image {
-    display: block;
-    width: 250px;
-    height: 200px; }
   .overlay {
     position: absolute;
     transition: all .3s ease;
