--- a/src/styles/_Projects.scss
+++ b/src/styles/_Projects.scss
@@ -30,7 +30,7 @@
 
     hr {
       margin-bottom: 10em;
-      width: 90%;
+      width: 100%;
     }
 
     ul {
@@ -54,8 +54,10 @@
     }
 
     .project-image {
-      max-width: 100%;
-      max-height: 100%;
+      //max-width: 100%;
+      //max-height: 100%;
+      height: 250px;
+      width: 100%;
     }
 
   }
@@ -67,6 +69,17 @@
 @media only screen and (min-width : 768px) {
   .project-section {
     width: 70%;
+    //background-color: yellow;
+
+    hr {
+      margin-bottom: 5em;
+    }
+
+    .project-image {
+      display: block;
+      width: 100%;
+      height: 300px;
+    }
   }
 }
 
@@ -79,7 +92,11 @@
     height: auto;
     margin-bottom: 20em;
     z-index: 1;
+    padding-top: 5em;
 
+    hr {
+      width: 90%;
+    }
 
 
     ul li p, h3 {
@@ -97,6 +114,12 @@
         height: auto;
       }
     }
+
+    .project-image {
+      display: block;
+      width: 250px;
+      height: 200px;
+    }
   }
 
 
@@ -106,12 +129,6 @@
     height: 100%;
     display: inline-block;
     background-color: #D3D3D3;
-  }
-
-  .project-image {
-    display: block;
-    width: 250px;
-    height: 200px;
   }
 
   .overlay {
